# FAB1B_Manipulator

./: README.rst  setup.cfg
src/manipulator/: __init__.py  icons_resources.py  icons_resources.qrc  manipulator.py  manipulator.ui  new_position_dialog.ui
